# moe-bangumi

./: .dockerignore  .gitignore  .hlint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  README.md  cabal.project  cabal.project.freeze  cliff.toml  config.json  events.jsonl  justfile  moe-bangumi.cabal  package-lock.json
.claude-plugin/: plugin.json
app/server/: Cargo.toml  Main.hs
app/server/src/: infra.rs  lib.rs  openapi.rs
app/server/src/api/: handlers.rs  router.rs
app/server/src/api/handlers/: bangumi.rs  calendar.rs  downloader.rs  episodes.rs  logs.rs  metadata.rs  mikan.rs  scan.rs  search.rs  settings.rs  torrents.rs  update.rs
app/server/src/infra/: error.rs  state.rs
app/server/src/infra/state/: builders.rs  types.rs
cli/cli/: Cargo.toml  Dockerfile  entrypoint.sh
cli/cli/src/: main.rs
cli/moe/: Cargo.toml  Dockerfile  build.rs
cli/moe/src/: main.rs
core/domain/: Cargo.toml
core/domain/src/: config.rs  models.rs  repositories.rs  services.rs  utils.rs
core/domain/src/models/: bangumi.rs  calendar.rs  log.rs  metadata.rs  rss.rs  seed.rs  series.rs  settings.rs  torrent.rs
core/domain/src/repositories/: bangumi.rs  calendar.rs  metadata.rs  series.rs  torrent.rs
core/domain/src/services/: bangumi.rs  calendar.rs  rename.rs  rss_processing.rs  scan.rs  washing.rs
core/domain/src/services/actors/metadata/: service.rs
core/domain/src/services/rename/: bdrip.rs  paths.rs  service.rs  standard.rs  subtitles.rs  tracked.rs
core/domain/src/services/rss_processing/: adapters.rs  filters.rs  processor.rs  service.rs  traits.rs
core/domain/src/utils/: tempdir.rs
core/downloader/: Cargo.toml
core/downloader/src/: client.rs  config.rs  impls.rs  lib.rs  models.rs  traits.rs
core/downloader/src/impls/: qbittorrent.rs  transmission.rs
core/downloader/src/models/: add_task_options.rs  task.rs  task_file.rs  task_filter.rs  task_status.rs
core/metadata/: Cargo.toml  README.md
core/metadata/src/: adapters.rs  client.rs  compat.rs  error.rs  lib.rs  models.rs  parsed_subject.rs  provider.rs
core/metadata/src/adapters/: bgmtv_adapter.rs  tmdb_adapter.rs
core/metadata/src/compat/: bgmtv_adapter.rs  provider.rs
core/parser/: Cargo.toml
core/parser/src/: bdrip.rs  bgmtv.rs  lib.rs  models.rs  parser.rs
core/parser/testdata/: test_cases.json
core/server/: Cargo.toml
core/server/src/: domain.rs  infra.rs  lib.rs  openapi.rs
core/server/src/api/: handlers.rs  router.rs
core/server/src/api/handlers/: bangumi.rs  calendar.rs  downloader.rs  episodes.rs  search.rs  settings.rs  update.rs
core/server/src/domain/: repositories.rs  services.rs
core/server/src/domain/models/: bangumi.rs  calendar.rs  log.rs  rss.rs  seed.rs  settings.rs
core/server/src/domain/repositories/: bangumi.rs  cache.rs  calendar.rs  log.rs  metadata.rs  rss.rs  torrent.rs
core/server/src/domain/services/: actors.rs  cache.rs  calendar.rs  http_client.rs  log.rs  rename.rs  rss_processing.rs  settings.rs  washing.rs
core/server/src/infra/: banner.rs  config.rs  db.rs  state.rs
core/server/src/infra/utils/: pathgen.rs  rss.rs  title.rs
core/updater/: Cargo.toml
core/updater/src/: config.rs  error.rs  lib.rs  models.rs  service.rs
crates/bgmtv/: Cargo.toml
crates/bgmtv/src/: client.rs  episodes.rs  lib.rs  models.rs  parser.rs
crates/calendar-seed/: Cargo.toml
crates/calendar-seed/src/: main.rs
crates/cli/: Cargo.toml  Dockerfile
crates/cli/src/: main.rs
crates/mikan/: Cargo.toml
crates/mikan/src/: client.rs  error.rs  lib.rs  models.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/model/src/models/: bangumi.rs  common.rs  metadata.rs  mod.rs  torrent.rs
crates/model/src/repositories/: bangumi.rs  calendar.rs  metadata.rs  torrent.rs
crates/notify/: Cargo.toml
crates/notify/src/: actor.rs  handle.rs  lib.rs  telegram.rs  worker.rs
crates/qbittorrent/: Cargo.toml
crates/qbittorrent/src/: app.rs  auth.rs  client.rs  error.rs  lib.rs  models.rs  torrents.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  db.rs  error.rs  handlers.rs  lib.rs  models.rs  openapi.rs  priority.rs  repositories.rs  router.rs  seed.rs  services.rs  state.rs  utils.rs
crates/server/src/api/: handlers.rs  router.rs
crates/server/src/api/handlers/: bangumi.rs  calendar.rs  downloader.rs  episodes.rs  logs.rs  metadata.rs  mikan.rs  scheduler.rs  search.rs  settings.rs  torrent_search.rs  torrents.rs  webhook.rs
crates/server/src/domain/models/: metadata.rs
crates/server/src/domain/services/: bangumi.rs  calendar.rs  rename.rs
crates/server/src/infra/: error.rs  state.rs  utils.rs
crates/server/src/models/: bangumi.rs  calendar.rs  common.rs  download_task.rs  downloader.rs  log.rs  metadata.rs  rss.rs  search.rs  seed.rs  settings.rs  torrent.rs
crates/server/src/repositories/: bangumi.rs  cache.rs  calendar.rs  download_task.rs  log.rs  metadata.rs  rss.rs  torrent.rs
crates/server/src/services/: bangumi.rs  calendar.rs  downloader.rs  file_rename.rs  log.rs  metadata.rs  mikan_mapping.rs  notification.rs  poster.rs  rename.rs  rss_processing.rs  scheduler.rs  settings.rs  torrent_coordinator.rs  tracing_layer.rs  washing.rs
crates/server/src/services/downloader/: actor.rs  client.rs  config.rs  error.rs  models.rs  qbittorrent_impl.rs  service.rs  traits.rs
crates/server/src/services/file_rename/: strategy.rs
crates/server/src/services/notification/: actor.rs  error.rs  mod.rs
crates/server/src/services/poster/: actor.rs
crates/server/src/services/scheduler/: calendar_refresh_job.rs  file_rename_job.rs  log_cleanup_job.rs  metadata_sync_job.rs  poster_sync_job.rs  rename_job.rs  rss_fetch_job.rs  torrent_sync_job.rs
crates/server/src/utils/: season_iterator.rs
crates/tmdb/: Cargo.toml
crates/tmdb/src/: client.rs  discover.rs  lib.rs  models.rs
crates/washing/: Cargo.toml
crates/washing/src/: lib.rs
libs/mikan/: Cargo.toml
libs/mikan/src/: lib.rs  models.rs
libs/qbittorrent/: Cargo.toml
libs/qbittorrent/src/: models.rs  torrents.rs
(+750 files in other folders)
