[workspace]
resolver = "2"
members = ["core/*", "cli/*", "libs/*"]

[workspace.package]
version = "0.2.4"
edition = "2021"
license = "MIT"

[workspace.dependencies]
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
urlencoding = "2"
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"
phf = { version = "0.11", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
scraper = "0.22"
toml = "0.8"
futures = "0.3"
quick-xml = "0.37"
serde_path_to_error = "0.1"
lru = "0.12"
teloxide = { version = "0.14", default-features = false, features = ["macros", "rustls"] }
parking_lot = "0.12"

[profile.release]
lto = "thin"
strip = true
