cabal-version: 3.4
name: moe-bangumi
version: 0.1.0.0
description: A Bangumi Management Tool
homepage: https://github.com/birdgg/moe-bangumi
license: MIT
license-file: LICENSE
author: birdgg
maintainer: birdeggegg@gmail.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common common-extensions
  default-extensions:
    DataKinds
    DeepSubsumption
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    GADTs
    LambdaCase
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language: GHC2024

common common-ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -fhide-source-paths
    -Wno-unused-do-bind
    -fshow-hole-constraints
    -Wno-unticked-promoted-constructors
    -Werror=unused-imports
    -fdicts-strict
    -fmax-worker-args=16
    -fspec-constr-recursive=16
    -Wunused-packages
    -flate-specialise
    -funbox-strict-fields
    -finline-generics-aggressively
    -fexpose-all-unfoldings

common common-rts-options
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -T"

library
  import: common-extensions, common-ghc-options
  hs-source-dirs: src
  exposed-modules:
    Moe.Error
    Moe.Prelude
    Moe.Domain.Bangumi.Types
    Moe.Domain.Bangumi.Parser
    Moe.Domain.Bangumi.Parser.Bgmtv
    Moe.Domain.Bangumi.Parser.File
    Moe.Domain.Bangumi.Parser.Internal.Pattern
    Moe.Domain.Bangumi.Parser.RssTitle
    Moe.Domain.Bangumi.Group.Types
    Moe.Domain.Bangumi.Subtitle.Types
    Moe.Domain.Tracking.Types
    Moe.Domain.Bangumi.Episode.Types
    Moe.Domain.Setting.Types
    Moe.Domain.Scheduler.Types
    Moe.Domain.File.Types
    Moe.Domain.File.Naming
    Moe.Domain.File.Parser
    Moe.Infrastructure.Setting.Effect
    Moe.Infrastructure.Metadata.Effect
    Moe.Infrastructure.BangumiData.Effect
    Moe.Infrastructure.BangumiData.Types
    Moe.Infrastructure.BangumiData.API
    Moe.Infrastructure.BangumiData.Client
    Moe.Infrastructure.Rss.Effect
    Moe.Infrastructure.Rss.Types
    Moe.Infrastructure.Rss.Source
    Moe.Infrastructure.Rss.Client
    Moe.Infrastructure.Download.Effect
    Moe.Infrastructure.Download.QBittorrent
    Moe.Infrastructure.Database.Bangumi
    Moe.Infrastructure.Database.Tracking
    Moe.Infrastructure.Database.Episode
    Moe.App.Scheduler.Jobs
    Moe.App.Bootstrap
    Moe.App.Env
    Moe.App.Logging
    Moe.App.Monad
    Moe.App.Scheduler
    Moe.App.CalendarSync
    Moe.App.Job
    Moe.App.Job.Types
    Moe.App.Job.Runner
    Moe.App.Subscription.Types
    Moe.App.Subscription.Fetch
    Moe.App.Subscription.Filter
    Moe.App.Subscription.Download
    Moe.App.Subscription.Washing
    Moe.App.Subscription.Pipeline
    Moe.App.Subscription.SingleFetch
    Moe.Web.Server
    Moe.Web.Types
    Moe.Web.Routers
    Moe.Web.Scalar
    Moe.Web.API.Routes
    Moe.Web.API.Server
    Moe.Web.API.DTO.Bangumi
    Moe.Web.API.DTO.Calendar
    Moe.Web.API.DTO.Setting
    Moe.Web.API.DTO.Tracking
    Moe.Web.API.Bangumi.Handler
    Moe.Web.API.Calendar.Handler
    Moe.Web.API.Setting.Handler
    Moe.Web.API.Tracking.Handler

  other-modules:
    Moe.Orphans
    Moe.Infrastructure.Database.Orphans
    Moe.App.Scheduler.Jobs.CalendarSync
    Moe.App.Scheduler.Jobs.Subscription
    Moe.App.Scheduler.Jobs.RssSync
    Moe.App.RssSync.Types
    Moe.App.RssSync.Fetch
    Moe.App.RssSync.Filter
    Moe.App.RssSync.Download
    Moe.App.RssSync.Pipeline

  build-depends:
    aeson ^>=2.2,
    async,
    base ^>=4.22.0.0,
    containers,
    cron,
    require-callstack,
    bytestring,
    directory,
    effectful,
    effectful-th,
    effectful-sqlite,
    filepath,
    hashable,
    http-api-data,
    http-client,
    http-client-tls,
    http-media,
    http-types,
    log-base,
    log-effectful,
    mtl,
    transformers,
    openapi3,
    pretty-simple,
    regex-rure,
    relude,
    resource-pool,
    safe-exceptions,
    servant,
    sqlite-simple,
    servant-client,
    servant-client-core,
    servant-openapi3,
    servant-server,
    stm,
    text,
    text-display,
    time,
    tmdb,
    bgmtv,
    qbittorrent,
    warp,
    xml-conduit,

executable moe-cli
  import: common-extensions, common-ghc-options, common-rts-options
  main-is: Main.hs
  hs-source-dirs: app/cli
  build-depends:
    base ^>=4.22.0.0,
    moe-bangumi,

test-suite moe-bangumi-test
  import: common-extensions, common-ghc-options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs

  other-modules:
    Moe.Domain.Bangumi.Parser.BgmtvSpec
    Moe.Domain.Bangumi.Parser.RssTitleSpec
    Moe.Domain.File.NamingSpec
    Moe.Infrastructure.BangumiData.TypesSpec

  build-depends:
    base ^>=4.22.0.0,
    moe-bangumi,
    tasty,
    tasty-hunit,
    text,
