cabal-version: 3.4
name: moe-bangumi
version: 0.1.0.0
description: A Bangumi Management Tool
homepage: https://github.com/birdgg/moe-bangumi
license: MIT
license-file: LICENSE
author: birdgg
maintainer: birdeggegg@gmail.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common common-extensions
  default-extensions:
    DataKinds
    DeepSubsumption
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    GADTs
    LambdaCase
    NoImplicitPrelude
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language: GHC2024

common common-ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -fhide-source-paths
    -Wno-unused-do-bind
    -fshow-hole-constraints
    -Wno-unticked-promoted-constructors
    -Werror=unused-imports
    -fdicts-strict
    -fmax-worker-args=16
    -fspec-constr-recursive=16
    -Wunused-packages
    -flate-specialise
    -funbox-strict-fields
    -finline-generics-aggressively
    -fexpose-all-unfoldings
    -fplugin=Effectful.Plugin

common common-rts-options
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N -T"

library
  import: common-extensions, common-ghc-options
  hs-source-dirs: src
  exposed-modules:
    Moe.App.Bootstrap
    Moe.App.CalendarSync
    Moe.App.Effect.Runner
    Moe.App.Env
    Moe.App.Job
    Moe.App.Job.Runner
    Moe.App.Job.Types
    Moe.App.Logging
    Moe.App.Monad
    Moe.App.Scheduler
    Moe.App.Rename.Run
    Moe.App.Scheduler.Jobs
    Moe.App.Subscription.Filter
    Moe.App.Subscription.Run
    Moe.App.Subscription.Types
    Moe.App.Subscription.Washing
    Moe.Domain.Bangumi.Episode
    Moe.Domain.Bangumi.File
    Moe.Domain.Bangumi.File.Naming
    Moe.Domain.Bangumi.File.Types
    Moe.Domain.Bangumi.Internal.Episode
    Moe.Domain.Bangumi.Internal.Group
    Moe.Domain.Bangumi.Internal.Metadata
    Moe.Domain.Bangumi.Internal.Season
    Moe.Domain.Bangumi.Internal.Subtitle
    Moe.Domain.Bangumi.Parser
    Moe.Domain.Bangumi.Parser.Bgmtv
    Moe.Domain.Bangumi.Parser.File
    Moe.Domain.Bangumi.Parser.Internal.Pattern
    Moe.Domain.Bangumi.Parser.RssTitle
    Moe.Domain.Bangumi.Season
    Moe.Domain.Bangumi.Types
    Moe.Domain.Scheduler.Types
    Moe.Domain.Setting.Types
    Moe.Domain.Rss.Types
    Moe.Domain.Tracking.Types
    Moe.Error
    Moe.Infrastructure.BangumiData.API
    Moe.Infrastructure.BangumiData.Client
    Moe.Infrastructure.BangumiData.Effect
    Moe.Infrastructure.BangumiData.Types
    Moe.Infrastructure.Database.Bangumi
    Moe.Infrastructure.Database.Episode
    Moe.Infrastructure.Database.Tracking
    Moe.Infrastructure.Download.Adapter
    Moe.Infrastructure.Download.Effect
    Moe.Infrastructure.Download.Types
    Moe.Infrastructure.Metadata.Effect
    Moe.Infrastructure.Notification.Adapter
    Moe.Infrastructure.Notification.Client
    Moe.Infrastructure.Notification.Effect
    Moe.Infrastructure.Rss.Client
    Moe.Infrastructure.Rss.Effect
    Moe.Infrastructure.Rss.Source
    Moe.Infrastructure.Rss.Types
    Moe.Infrastructure.Setting.Effect
    Moe.Prelude
    Moe.Web.API.Bangumi.Handler
    Moe.Web.API.Calendar.Handler
    Moe.Web.API.DTO.Bangumi
    Moe.Web.API.DTO.Calendar
    Moe.Web.API.DTO.Setting
    Moe.Web.API.DTO.Tracking
    Moe.Web.API.Routes
    Moe.Web.API.Server
    Moe.Web.API.Setting.Handler
    Moe.Web.API.Tracking.Handler
    Moe.Web.Routers
    Moe.Web.Scalar
    Moe.Web.Server
    Moe.Web.Types

  other-modules:
    Moe.App.Scheduler.Jobs.CalendarSync
    Moe.App.Scheduler.Jobs.Rename
    Moe.App.Scheduler.Jobs.Subscription
    Moe.Infrastructure.Database.Orphans
    Moe.Orphans

  build-depends:
    aeson ^>=2.2,
    async,
    base ^>=4.22.0.0,
    bgmtv,
    bytestring,
    containers,
    cron,
    directory,
    effectful,
    effectful-core,
    effectful-plugin,
    effectful-qbittorrent,
    effectful-sqlite,
    effectful-th,
    filepath,
    hashable,
    http-api-data >= 0.7,
    http-client,
    http-client-tls,
    http-media,
    http-types,
    log-base,
    log-effectful,
    mtl,
    openapi3,
    pretty-simple,
    regex-rure,
    relude,
    require-callstack,
    resource-pool,
    safe-exceptions,
    servant,
    servant-client,
    servant-client-core,
    servant-openapi3,
    servant-server,
    sqlite-simple,
    stm,
    text,
    text-display,
    time,
    tmdb,
    transformers,
    warp,
    xml-conduit,

executable moe-cli
  import: common-extensions, common-ghc-options, common-rts-options
  main-is: Main.hs
  hs-source-dirs: app/cli
  build-depends:
    base ^>=4.22.0.0,
    effectful-core,
    effectful-plugin,
    moe-bangumi,

test-suite moe-bangumi-test
  import: common-extensions, common-ghc-options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Moe.App.Subscription.WashingSpec
    Moe.Domain.Bangumi.File.NamingSpec
    Moe.Domain.Bangumi.Parser.BgmtvSpec
    Moe.Domain.Bangumi.Parser.RssTitleSpec
    Moe.Infrastructure.BangumiData.TypesSpec

  build-depends:
    effectful-core,
    effectful-plugin,
    moe-bangumi,
    tasty,
    tasty-hunit,
    text,
    time,
