[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
openapi = ["server/openapi"]

[[bin]]
name = "moe"
path = "src/main.rs"

[dependencies]
server = { path = "../../core/server", default-features = false }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
