[package]
name = "moe"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.release]
release = true

[features]
default = []
openapi = ["server/openapi"]

[[bin]]
name = "moe"
path = "src/main.rs"

[dependencies]
server = { path = "../../app/server", default-features = false }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
