[package]
name = "downloader"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
openapi = ["dep:utoipa", "qbittorrent/openapi"]

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
url = "2"
utoipa = { workspace = true, optional = true }
qbittorrent = { path = "../../libs/qbittorrent" }
transmission-rpc = "0.5"
