[package]
name = "downloader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
url = "2"
utoipa.workspace = true
qbittorrent = { path = "../../libs/qbittorrent" }
transmission-rpc = "0.5"
