[package]
name = "metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true

# Parser crate for name parsing
parser = { path = "../parser" }

# Data source clients (in libs/)
bgmtv = { path = "../../libs/bgmtv" }
tmdb = { path = "../../libs/tmdb" }
