[package]
name = "parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
openapi = ["dep:utoipa"]

[dependencies]
regex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
phf.workspace = true
serde_json = { workspace = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
