[package]
name = "parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
phf.workspace = true
serde_json = { workspace = true }
utoipa.workspace = true

[dev-dependencies]
