[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["openapi"]
openapi = [
    "dep:utoipa",
    "dep:utoipa-axum",
    "dep:utoipa-scalar",
    "tmdb/openapi",
    "bgmtv/openapi",
    "mikan/openapi",
    "downloader/openapi",
    "qbittorrent/openapi",
    "parser/openapi",
    "washing/openapi",
    "metadata/openapi",
    "updater/openapi",
]

[dependencies]
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
utoipa = { workspace = true, optional = true }
utoipa-axum = { workspace = true, optional = true }
utoipa-scalar = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["multipart"] }
# Third-party API clients (in libs/)
tmdb = { path = "../../libs/tmdb" }
bgmtv = { path = "../../libs/bgmtv" }
mikan = { path = "../../libs/mikan" }
qbittorrent = { path = "../../libs/qbittorrent" }
downloader = { path = "../downloader" }
# Unified metadata abstraction
metadata = { path = "../metadata" }
# Self-update service
updater = { path = "../updater" }
# Tool libraries (kept separate)
parser = { path = "../parser" }
washing = { path = "../washing" }
# Dependencies from merged crates
chrono.workspace = true
tower-http.workspace = true
toml.workspace = true
regex.workspace = true
futures.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tracing-subscriber.workspace = true
parking_lot.workspace = true
urlencoding = "2"
sha2 = "0.10"
hex = "0.4"
# From rss crate
quick-xml.workspace = true
# From notify crate
teloxide.workspace = true
lru.workspace = true
