[package]
name = "updater"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-update service for moe-bangumi"

[dependencies]
semver = "1.0"
tar = "0.4"
flate2 = "1.1"
sha2 = "0.10"
hex = "0.4"
tokio = { workspace = true, features = ["sync", "time", "fs"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[features]
default = []
# Enable OpenAPI schema generation
openapi = ["dep:utoipa"]

[dependencies.utoipa]
workspace = true
optional = true
