[package]
name = "bgmtv"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
openapi = ["dep:utoipa"]

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_repr.workspace = true
utoipa = { workspace = true, optional = true }
serde_path_to_error.workspace = true
chrono.workspace = true
regex.workspace = true
phf.workspace = true
