[package]
name = "calendar-seed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
metadata = { path = "../metadata" }
mikan = { path = "../../libs/mikan" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
futures.workspace = true
reqwest.workspace = true
