[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["openapi"]
openapi = ["server/openapi"]

[[bin]]
name = "moe"
path = "src/main.rs"

[[bin]]
name = "calendar_seed"
path = "src/bin/calendar_seed.rs"

[dependencies]
server = { path = "../server", default-features = false }
mikan = { path = "../mikan" }
bgmtv = { path = "../bgmtv" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
futures.workspace = true
reqwest.workspace = true
