[package]
name = "mikan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
scraper.workspace = true
urlencoding.workspace = true
utoipa.workspace = true
