[package]
name = "mikan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
scraper.workspace = true
urlencoding.workspace = true
utoipa.workspace = true
regex.workspace = true
chrono.workspace = true
parser = { path = "../parser" }

[dev-dependencies]
tokio.workspace = true
