[package]
name = "model"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
openapi = ["dep:utoipa", "parser/openapi", "washing/openapi"]

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
utoipa = { workspace = true, optional = true }
parser = { path = "../parser" }
washing = { path = "../washing" }
bgmtv = { path = "../bgmtv" }
