[package]
name = "notify"
version = "0.1.0"
edition = "2024"

[dependencies]

thiserror = {workspace = true}
anyhow ={ workspace = true}
tracing = { workspace = true }
async-trait = { workspace = true }
teloxide = { version = "0.14", features = ["macros", "rustls"], default-features = false }
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
lru = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }