[package]
name = "qbittorrent"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
openapi = ["dep:utoipa"]

[dependencies]
reqwest = { workspace = true, features = ["cookies", "multipart"] }
tokio = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa = { workspace = true, optional = true }
