[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true
reqwest.workspace = true
tmdb = { path = "../tmdb" }
bgmtv = { path = "../bgmtv" }
mikan = { path = "../mikan" }
chrono.workspace = true
tower-http.workspace = true
