[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["openapi"]
openapi = [
    "dep:utoipa",
    "dep:utoipa-axum",
    "dep:utoipa-scalar",
    "model/openapi",
    "tmdb/openapi",
    "bgmtv/openapi",
    "mikan/openapi",
    "downloader/openapi",
    "qbittorrent/openapi",
    "parser/openapi",
    "washing/openapi",
]

[dependencies]
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
utoipa = { workspace = true, optional = true }
utoipa-axum = { workspace = true, optional = true }
utoipa-scalar = { workspace = true, optional = true }
reqwest.workspace = true
model = { path = "../model" }
tmdb = { path = "../tmdb" }
bgmtv = { path = "../bgmtv" }
mikan = { path = "../mikan" }
qbittorrent = { path = "../qbittorrent" }
downloader = { path = "../downloader" }
rss = { path = "../rss" }
notify = { path = "../notify" }
parser = { path = "../parser" }
pathgen = { path = "../pathgen" }
washing = { path = "../washing" }
chrono.workspace = true
tower-http.workspace = true
toml.workspace = true
regex.workspace = true
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing-subscriber.workspace = true
parking_lot = "0.12"
urlencoding = "2"
sha2 = "0.10"
hex = "0.4"
