[package]
name = "tmdb"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
openapi = ["dep:utoipa"]

[dependencies]
parking_lot = "0.12"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding.workspace = true
utoipa = { workspace = true, optional = true }
